frontend:изменена страница рекдактирования профиля, работа с аккаунтами slurm, просмотр конфигурации slurmdbd backend: работа с аккаунтами slurm, контроллер и сервис для работы с конфигурацией slurmdbd